renamed frontend folder

--- a/url-shortener-frontend/package.json
+++ b/url-shortener-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "url-shortner-frontend",
+  "name": "url-shortener-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
