--- a/url-shortener-backend/package.json
+++ b/url-shortener-backend/package.json
@@ -56,15 +56,17 @@
     "@loopback/rest-explorer": "^5.0.0",
     "@loopback/service-proxy": "^5.0.0",
     "loopback-connector-mongodb": "^5.6.0",
-    "tslib": "^2.0.0"
+    "nanoid": "^3.3.4",
+    "tslib": "^2.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@loopback/build": "^9.0.0",
-    "source-map-support": "^0.5.21",
+    "@loopback/eslint-config": "^13.0.0",
     "@loopback/testlab": "^5.0.0",
     "@types/node": "^12.20.50",
-    "@loopback/eslint-config": "^13.0.0",
     "eslint": "^8.14.0",
+    "source-map-support": "^0.5.21",
     "typescript": "~4.6.4"
   }
 }
