--- a/url-shortener-frontend/package.json
+++ b/url-shortener-frontend/package.json
@@ -9,10 +9,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "axios": "^0.27.2",
+    "bootstrap": "4.6.0",
+    "bootstrap-vue": "2.21.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
+    "vue-clipboard2": "^0.3.3",
     "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
